--- a/src/components/SalaryForm.scss
+++ b/src/components/SalaryForm.scss
@@ -1,4 +1,4 @@
-@import "style";
+@import "../style";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 .form-salary {
   font-family: Futura, sans-serif;
