--- a/src/components/Info.scss
+++ b/src/components/Info.scss
@@ -5,16 +5,40 @@
     margin-left: 0.5em;
     border: solid 1px #9d9d9d;
     border-radius: 1em;
-    width: 1em;
-    height: 1em;
+    width: 1.2em;
+    height: 1.2em;
     color: #9d9d9d;
     text-align: center;
     user-select: none;
+    font-family: sans-serif;
 
     span{
       font-size: 0.8em;
       vertical-align: top;
       font-weight: 100;
+    }
+  }
+
+  .banner {
+    margin-top: 1.1em;
+    margin-left: 1em;
+    div:first-child {
+      content: '';
+      position: absolute;
+      z-index: 1000;
+      margin-top: -20px;
+      border: 10px solid transparent;
+      border-bottom: 10px solid #5e6da8;
+      border-left: 10px solid #5e6da8;
+    }
+    div:last-child {
+      z-index: 1000;
+      background: #5e6da8;
+      padding: 15px;
+      position: relative;
+      color: #fff;
+      font-size: 0.8em;
+      max-width: 20em;
     }
   }
 }
